# ska-ser-infra-machinery

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  pyproject.toml  setenv.sh
.gitlab/ci/: ca.e2e.gitlab-ci.yml  datacentres.gitlab-ci.yml  e2e.gitlab-ci.yml  installation.gitlab-ci.yml  logging.e2e.gitlab-ci.yml  logging.production.gitlab-ci.yml  logging.staging.gitlab-ci.yml  monitoring.e2e.gitlab-ci.yml  orchestration.gitlab-ci.yml  production.logging.gitlab-ci.yml  production.monitoring.gitlab-ci.yml  staging.logging.gitlab-ci.yml  staging.monitoring.gitlab-ci.yml  stfc-techops.gitlab-ci.yml  templates.gitlab-ci.yml
datacentres/psi-mid/: README.md
datacentres/psi-mid/installation/: no_terraform.inventory.yml
datacentres/shared/: ca.inventory.yml  ca.ssh.config  e2e_ca.inventory.yml  e2e_ca.ssh.config
datacentres/stfc-dp/installation/: ca.inventory.yml
datacentres/stfc-techops/: stfc-techops.gitlab-ci.yml
environments/elastic-e2e-test/installation/: ansible.cfg
environments/elastic-e2e-test/orchestration/: client.tf  elasticsearch.tf  terraform.tf  terraform.tfvars  variables.tf
environments/engage/installation/: ansible.cfg  inventory.yml
environments/engage/orchestration/: ceph.tf  terraform.tfvars
environments/psi-mid/: README.md
environments/psi-mid/installation/: no_terraform.inventory.yml  (+1 more)
environments/shared/: ca.inventory.yml  certificate_authority.inventory.yml
environments/stfc-dp/: README.md
environments/stfc-techops/: README.md
scripts/: get-secrets.py
templates/: e2e.gitlab-ci.yml  installation.gitlab-ci.yml
(+172 files in other folders)
